<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpecialTest</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="monkey">Monkey</string>
    <string name="setting">Setting</string>
    
	<string name="monitor_setting">Monitor Setting</string>
	<string name="cb_cpu">Cpu</string>
    <string name="cb_memory">Memory</string>
    <string name="cb_traffic">Traffic</string>
    <string name="cb_battery">Battery</string>
    <string name="select_monitor_setting">pls select monitor setting</string>
    <string name="start_test">Start Test</string>
    <string name="stop_test">Stop Test</string>

    <string name="collecting_frequency">Collecting Interval(s)</string>
    <string-array name="collecting_frequency_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string name="tv_select_app">Please select target app</string>
    <string name="title_select_app">Select App</string>
    
    <string name="tv_report_null">No report,pls test！</string>
    <string name="report_delete">del</string>
    <string name="report_send">send</string>
    
    <string name="monkey_count">count:</string>
    <string name="monkey_seed">seed:</string>
    <string name="monkey_throttle">throttle:</string>
    <string name="monkey_ignore_crashes">ignore crashes</string>
    <string name="monkey_ignore_timeouts">ignore timeouts</string>
    <string name="monkey_log_level">log level</string>
    
    <string name="receiver">Receivers(separated by space):</string>
    <string name="floating_window">Show Floating Window</string>
    <string name="save">Save</string>

    <string name="calculating">Calculating&#8230;</string>
    <string name="open_wifi">WIFI Off</string>
    <string name="close_wifi">WIFI On</string>
    <string name="process_free_mem">App/Available Memory:</string>
    <string name="process_overall_cpu">App/System CPU:</string>
    <string name="start_time">Start Time:</string>
    <string name="total_usage">\u0020Total Usage(%)</string>
    <string name="process_package">Package Name</string>
    <string name="process_name">App Name</string>
    <string name="process_pid">App PID</string>
    <string name="mem_size">Device Memory Size(MB)</string>
    <string name="cpu_type">Device CPU Type</string>
    <string name="android_system_version">Android Version</string>
    <string name="mobile_type">Device Brand/Model</string>
    <string name="timestamp">Timestamp</string>
    <string name="used_mem_PSS">App Used Memory PSS(MB)</string>
    <string name="used_mem_ratio">App Used Memory(%)</string>
    <string name="mobile_free_mem">System Available Memory(MB)</string>
    <string name="app_used_cpu_ratio">App Used CPU(%)</string>
    <string name="total_used_cpu_ratio">Total Used CPU(%)</string>
    <string name="traffic">Total Traffic:</string>
    <string name="send_traffic">Upload</string>
     <string name="rcv_traffic">Downland</string>
    <string name="battery">Battery(%)</string>
    <string name="current">Current(mA)</string>
    <string name="temperature">Temperature</string>
    <string name="voltage">Voltage(V)</string>
    <string name="stat_error">Stat Error</string>

    <string name="comment1">Note: for unsupported devices refer to: https://github.com/NetEase/Emmagee/wiki/Some-devices-are-not-supported</string>
    <string name="comment2">Current: negative for discharging while positive for charging</string>
    <string name="comment3">Start time: empty means either the app has been started or failed to fetch start time</string>
    <string name="comment4">N/A: not supported or data exception</string>

    <string name="can_not_start_app_toast">The app can not be launched</string>
    <string name="test_finish_toast">Test finish,please go to report</string>
    <string name="save_success_toast">Saved</string>
    <string name="sender_mail_toast">Sender\'s email:</string>
    <string name="receiver_mail_toast">Receiver\'s email:</string>
    <string name="format_incorrect_format">Invalid email format</string>
    <string name="info_incomplete_toast">Incomplete email settings</string>
    <string name="wifi_fail_toast">Failed to set WIFI</string>
    <string name="add_mail">add mail</string>
    <string name="send_success_toast">Test result has been sent to:</string>
    <string name="send_fail_toast">Test result failed to be sent to your mailbox, retry</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Are you sure to exit？</string>
    <string name="quite_alert">Click again to exit</string>
    
    <string name="about">About</string>
    <string name="mail_settings">Mail Settings</string>
    <string name="version_title">Version </string>
    <string name="about_emmagee_intro">SpecialTest is a practical, handy performance test tool for specified
         Android App, which can monitor CPU, memory, network traffic, battery current and status. 
         Additionally, it also provides several cool features such as customizing interval of collecting
         data, rendering real-time process status in a floating window, and much more.</string>
    <string name="about_team">Team：QA, Netease(Hangzhou)</string>
    <string name="about_project_address">Project Site：https://github.com/NetEase/Emmagee</string>
    
    <string name="top_activity">Top Activity Name</string>
    <string name="csv_encoding">UTF-8</string>
    <string name="dalvik_heap">Dalvik heap alloc/size(KB)</string>
    <string name="native_heap">Native heap alloc/size(KB)</string>
    
    <string name="collect_heap">Collect Heap</string>
    <string name="root_notification">(root is necessary)</string>
    <string name="root_failed_notification">Fail to get root permission, please check if this phone is rooted</string>
</resources>
