<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_home"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:padding="@dimen/layout_vertical_margin_small"
                android:text="@string/home"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="@dimen/line_height"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />

            <RadioButton
                android:id="@+id/radio_report"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="@dimen/layout_vertical_margin_small"
                android:text="@string/report"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="@dimen/line_height"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />

            <RadioButton
                android:id="@+id/radio_setting"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:padding="@dimen/layout_vertical_margin_small"
                android:text="@string/setting"
                android:textSize="@dimen/text_size" />
        </RadioGroup>
    </LinearLayout>

</TabHost>