<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_purple"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/title_bar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textview_horizontal_margin"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_bg"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                android:padding="@dimen/layout_vertical_margin_small" >

                <TextView
                    android:id="@+id/tv_selectapp_capability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/tv_select_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_big" />

                <TextView
                    android:id="@+id/capability_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@id/tv_selectapp_capability"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_big" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_horizontal_margin"
                android:background="@drawable/corner_bg"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/layout_vertical_margin_small"
                    android:text="@string/monitor_setting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/item_cpu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/layout_vertical_margin_small" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/cb_cpu"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <CheckBox
                        android:id="@+id/item_cb_cpu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/custom_checkbox"
                        android:button="@null"
                        android:checked="true"
                        android:clickable="false"
                        android:paddingLeft="@dimen/image_padding"
                        android:paddingRight="@dimen/image_padding" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/item_memory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/layout_vertical_margin_small" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/cb_memory"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <CheckBox
                        android:id="@+id/item_cb_memory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/custom_checkbox"
                        android:button="@null"
                        android:checked="true"
                        android:clickable="false"
                        android:paddingLeft="@dimen/image_padding"
                        android:paddingRight="@dimen/image_padding" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/item_traffic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/layout_vertical_margin_small" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/cb_traffic"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <CheckBox
                        android:id="@+id/item_cb_traffic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/custom_checkbox"
                        android:button="@null"
                        android:checked="true"
                        android:clickable="false"
                        android:paddingLeft="@dimen/image_padding"
                        android:paddingRight="@dimen/image_padding" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:background="@color/light_gray" />

                <RelativeLayout
                    android:id="@+id/item_battery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/layout_vertical_margin_small" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/cb_battery"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />

                    <CheckBox
                        android:id="@+id/item_cb_battery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/custom_checkbox"
                        android:button="@null"
                        android:checked="true"
                        android:clickable="false"
                        android:paddingLeft="@dimen/image_padding"
                        android:paddingRight="@dimen/image_padding" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textview_horizontal_margin"
                android:background="@drawable/corner_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/layout_vertical_margin_small"
                    android:text="@string/collecting_frequency"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/sp_collecting_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/image_padding"
                    android:paddingRight="@dimen/image_padding" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/home_test"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="@dimen/layout_marginBottom_test"
                    android:layout_marginLeft="@dimen/layout_marginLeft_test"
                    android:layout_marginRight="@dimen/layout_marginRight_test"
                    android:layout_marginTop="@dimen/layout_marginRight_test"
                    android:background="@drawable/test_button"
                    android:text="@string/start_test"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_test" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>